feat(logging): enhanced log + json format